--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        >
         
         <!-- Welcome Activity - Launch Screen -->
         <activity
@@ -57,6 +58,7 @@
             android:name=".HomeActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+        <activity android:name=".PetProfileActivity" />
 
     </application>
 
